SUBDIRS = socketapi cppsocketapi socket_programs cppsocket_programs scripts

EXTRA_DIST = \
   debian/source/format \
   debian/upstream/signing-key.asc \
   debian/upstream/metadata \
   debian/compat \
   debian/libsctpsocket-dev.install \
   debian/libsctpsocket2.install \
   debian/rules \
   debian/not-installed \
   debian/control \
   debian/watch \
   debian/copyright \
   debian/changelog \
   freebsd/socketapi/distinfo \
   freebsd/socketapi/pkg-plist \
   freebsd/socketapi/pkg-descr \
   freebsd/socketapi/test-packaging \
   freebsd/socketapi/Makefile \
   rpm/socketapi.spec

ACLOCAL_AMFLAGS = -I m4
