SUBDIRS = socketapi cppsocketapi socket_programs cppsocket_programs scripts

EXTRA_DIST = \
   debian/changelog \
   debian/control \
   debian/copyright \
   debian/libsctpsocket2.install \
   debian/libsctpsocket2.symbols \
   debian/libsctpsocket-dev.install \
   debian/not-installed \
   debian/rules \
   debian/source/format \
   debian/source/lintian-overrides \
   debian/upstream/metadata \
   debian/upstream/signing-key.asc \
   debian/watch \
   freebsd/socketapi/distinfo \
   freebsd/socketapi/Makefile \
   freebsd/socketapi/pkg-descr \
   freebsd/socketapi/pkg-plist \
   freebsd/socketapi/test-packaging \
   rpm/socketapi.spec

ACLOCAL_AMFLAGS = -I m4
